--- a/index.html
+++ b/index.html
@@ -15,12 +15,37 @@
 
         body {
             overflow: hidden;
+            background-color: black;
+        }
+
+        #content {
+            height: 100vh;
+            width: 100vw;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        #canvas {
+            display: block;
+
+            width: 100%;
+            height: 100%;
+
+            max-width: 1280px;
+            max-height: 780px;
+
+            min-width: 640px;
+            min-width: 480px;
         }
     </style>
 </head>
 
 <body>
-    <canvas id="canvas"></canvas>
+    <div id="content">
+        <canvas id="canvas"></canvas>
+    </div>
     <script src="digitalrain.js"></script>
 </body>
 
